changes to docs and error codes
